sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:23: error: 'while' expected but '(' found.
(i=0
^AlgCombSort:25: error: '(' expected but ';' found.
while(ecart>1 )
^AlgCombSort:26: error: illegal start of simple expression
}
^